reverting back to normal

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -217,7 +217,7 @@ text-decoration: none;
 font-family: 'Capita', Georgia, serif;
 }
 
-#mission {
+/*#mission {
 	font-family: $mission-font-family;
 	font-size: 6;
-}
+}*/
