--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$mission-font-family: 'Roboto Slab', serif;
+//$mission-font-family: 'Roboto Slab', serif;
 $base-font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 //$base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size:   .95em;
